force-app/main/default/objects/User_Commission_Plan__c/User_Commission_Plan__c.object-meta.xml
<CustomObject>
    <label>User Commission Plan</label>
    <nameField>
        <label>User Commission Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Commission Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>