force-app/main/default/objects/User_Commission_Plan__c/fields/Band_1_Max__c.field-meta.xml
<CustomField>
    <fullName>Band_1_Max__c</fullName>
    <label>Band 1 Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>