force-app/main/default/objects/User_Commission_Plan__c/fields/Band_3_Pct__c.field-meta.xml
<CustomField>
    <fullName>Band_3_Pct__c</fullName>
    <label>Band 3 Pct</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>