force-app/main/default/objects/User_Commission_Plan__c/fields/Multi_Year_Pct__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year_Pct__c</fullName>
    <label>Multi-Year Pct</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>